apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/Sentinel_Incident__c.object-meta.xml
<CustomObject>
    <label>Sentinel Incident</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Sentinel Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sentinel Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>