apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <label>AI Confidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>