apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/AI_Explanation__c.field-meta.xml
<CustomField>
    <fullName>AI_Explanation__c</fullName>
    <description>Safe logical explanation of why this incident occurred</description>
    <label>AI Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>