apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending Approval</fullName><default>true</default><label>Pending Approval</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Not Required</fullName><default>false</default><label>Not Required</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>