apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>Execution_Status__c</fullName>
    <label>Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Started</fullName><default>true</default><label>Not Started</label></value>
            <value><fullName>Ready for Execution</fullName><default>false</default><label>Ready for Execution</label></value>
            <value><fullName>Executed</fullName><default>false</default><label>Executed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Skipped</fullName><default>false</default><label>Skipped</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>