apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Memory_Used__c.field-meta.xml
<CustomField>
    <fullName>Memory_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether past resolutions (memory) were injected</description>
    <label>Memory Used</label>
    <type>Checkbox</type>
</CustomField>