apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Orchestration_Mode__c.field-meta.xml
<CustomField>
    <fullName>Orchestration_Mode__c</fullName>
    <description>The current operating mode (LLM, HYBRID, RULE)</description>
    <label>Orchestration Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>