apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Policy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Policy_Reason__c</fullName>
    <label>Policy Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>