apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Recommendation_Status__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Status__c</fullName>
    <label>Recommendation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Generated</fullName><default>true</default><label>Generated</label></value>
            <value><fullName>Needs Review</fullName><default>false</default><label>Needs Review</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Executed</fullName><default>false</default><label>Executed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>