apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>LOW</fullName><default>false</default><label>LOW</label></value>
            <value><fullName>MEDIUM</fullName><default>false</default><label>MEDIUM</label></value>
            <value><fullName>HIGH</fullName><default>false</default><label>HIGH</label></value>
            <value><fullName>CRITICAL</fullName><default>false</default><label>CRITICAL</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>