apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reason__c</fullName>
    <description>Explanation of why the incident received its calculated Risk Level</description>
    <label>Risk Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>