apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Runbook_Key__c.field-meta.xml
<CustomField>
    <fullName>Runbook_Key__c</fullName>
    <label>Runbook Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>