apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Runbook_Reason__c.field-meta.xml
<CustomField>
    <fullName>Runbook_Reason__c</fullName>
    <description>Explanation of why the provided runbook is relevant</description>
    <label>Runbook Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>