apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Runbook_Steps__c.field-meta.xml
<CustomField>
    <fullName>Runbook_Steps__c</fullName>
    <label>Runbook Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>