apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label>New</label></value>
            <value><fullName>Analyzed</fullName><default>false</default><label>Analyzed</label></value>
            <value><fullName>Approval Required</fullName><default>false</default><label>Approval Required</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Action Created</fullName><default>false</default><label>Action Created</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>