apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/fields/Zentom_Incident_Id__c.field-meta.xml
<CustomField>
    <fullName>Zentom_Incident_Id__c</fullName>
    <externalId>true</externalId>
    <label>Zentom Incident Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>