apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/listViews/All_Sentinel_Incidents.listView-meta.xml
<ListView>
    <fullName>All_Sentinel_Incidents</fullName>
    <columns>NAME</columns>
    <columns>Incident_Type__c</columns>
    <columns>Source__c</columns>
    <columns>Environment__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Risk_Level__c</columns>
    <columns>Policy_Decision__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Sentinel Incidents</label>
</ListView>