apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/listViews/Approval_Required.listView-meta.xml
<ListView>
    <fullName>Approval_Required</fullName>
    <columns>NAME</columns>
    <columns>Incident_Type__c</columns>
    <columns>Environment__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Risk_Level__c</columns>
    <columns>Policy_Decision__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approval Required</value>
    </filters>
    <label>Approval Required</label>
</ListView>