apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/listViews/Critical_Incidents.listView-meta.xml
<ListView>
    <fullName>Critical_Incidents</fullName>
    <columns>NAME</columns>
    <columns>Incident_Type__c</columns>
    <columns>Environment__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Risk_Level__c</columns>
    <columns>Policy_Decision__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Risk_Level__c</field>
        <operation>equals</operation>
        <value>CRITICAL</value>
    </filters>
    <label>Critical Incidents</label>
</ListView>