apps/sentinelflow-salesforce/force-app/main/default/objects/Sentinel_Incident__c/listViews/Production_Incidents.listView-meta.xml
<ListView>
    <fullName>Production_Incidents</fullName>
    <columns>NAME</columns>
    <columns>Incident_Type__c</columns>
    <columns>Source__c</columns>
    <columns>Environment__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Risk_Level__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Environment__c</field>
        <operation>equals</operation>
        <value>production</value>
    </filters>
    <label>Production Incidents</label>
</ListView>